[gd_scene load_steps=7 format=3 uid="uid://ye2j101d35q0"]

[ext_resource type="Script" path="res://scenes/menu_confirm.gd" id="1_0edek"]
[ext_resource type="Theme" uid="uid://cts0fwcuwbvl0" path="res://theme_default.tres" id="2_3o64u"]
[ext_resource type="PackedScene" uid="uid://bqt532l8n2w8u" path="res://objects/card_details.tscn" id="2_n5wvw"]
[ext_resource type="FontFile" uid="uid://do6lscs8csbaq" path="res://fonts/Roboto/Roboto-Regular.ttf" id="3_0wlpa"]

[sub_resource type="LabelSettings" id="LabelSettings_txys0"]
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_ect70"]
font_size = 32

[node name="MenuConfirm" type="Node2D"]
z_index = 1000
script = ExtResource("1_0edek")

[node name="Panel" type="Panel" parent="."]
offset_left = -300.0
offset_top = -150.0
offset_right = 300.0
offset_bottom = 150.0
theme = ExtResource("2_3o64u")

[node name="HeaderPanel" type="Panel" parent="."]
offset_left = -300.0
offset_top = -236.0
offset_right = 300.0
offset_bottom = -156.0
theme = ExtResource("2_3o64u")

[node name="Label" type="Label" parent="HeaderPanel"]
layout_mode = 0
offset_right = 600.0
offset_bottom = 80.0
text = "Viewing Cards"
label_settings = SubResource("LabelSettings_txys0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="YesButton" type="Button" parent="."]
offset_left = -200.0
offset_top = -130.0
offset_right = -40.0
offset_bottom = -70.0
theme = ExtResource("2_3o64u")
theme_override_font_sizes/font_size = 28
text = "Yes"

[node name="OKButton" type="Button" parent="."]
visible = false
offset_left = -160.0
offset_top = -130.0
offset_right = 160.0
offset_bottom = -70.0
theme = ExtResource("2_3o64u")
theme_override_font_sizes/font_size = 28
text = "OK"

[node name="NoButton" type="Button" parent="."]
offset_left = 40.0
offset_top = -130.0
offset_right = 200.0
offset_bottom = -70.0
theme = ExtResource("2_3o64u")
theme_override_font_sizes/font_size = 28
text = "No"

[node name="Timer" type="Label" parent="."]
offset_left = 192.0
offset_top = -149.0
offset_right = 290.0
offset_bottom = -105.0
theme_override_fonts/font = ExtResource("3_0wlpa")
text = "15 ◷"
label_settings = SubResource("LabelSettings_ect70")
horizontal_alignment = 2

[node name="HelpText" type="RichTextLabel" parent="."]
offset_left = -275.0
offset_top = -56.0
offset_right = 275.0
offset_bottom = 134.0
mouse_filter = 2
theme = ExtResource("2_3o64u")
theme_override_font_sizes/normal_font_size = 32
scroll_active = false

[node name="CardDetails" parent="." instance=ExtResource("2_n5wvw")]
position = Vector2(512, -24)
scale = Vector2(0.5, 0.5)

[connection signal="pressed" from="YesButton" to="." method="_on_yes_button_pressed"]
[connection signal="pressed" from="OKButton" to="." method="_on_yes_button_pressed"]
[connection signal="pressed" from="NoButton" to="." method="_on_no_button_pressed"]
